feat: profile moved to MainScreen bottomSheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="sign_out">Выйти</string>
     <string name="greeting_text">JetRecipe</string>
     <string name="greeting_subtext">Кастомное пет-приложение для поиска рецептов</string>
+    <string name="greeting_warning">Увы API themealdb.com не работает в РФ, поэтому для корректной работы понадобится VPN</string>
     <string name="web_client_id">256142068012-9ijqt99kffn62ocrh5i4sb11fsrunevm.apps.googleusercontent.com</string>
 </resources>
